fixed overflow

--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -2,6 +2,7 @@
 body {
   font-family: "Roboto", sans-serif;
   line-height: 1.3;
+  width: 100%;
 }
 :root {
   --dark-slate-grey: hsl(234, 29%, 20%);
@@ -59,6 +60,7 @@ main > :nth-child(n + 1) {
   content: url("../images/icon-list.svg");
 }
 /* Main form */
+
 .main-form-label {
   font-weight: 700;
   font-size: 0.7rem;
@@ -66,10 +68,11 @@ main > :nth-child(n + 1) {
   margin-bottom: 5px;
 }
 .main-form-input-email {
+  box-sizing: border-box;
+  width: 100%;
   padding: 12px 0;
   padding-left: 30px;
   margin-bottom: 10px;
-  width: 100%;
 }
 .form-submit {
   width: 100%;
